# OMatG

./: .gitattributes  .gitignore  20241022-095410.xyz  20241022-095708.xyz  20241022-102250.xyz  20241022-104452.xyz  20241022-104522.xyz  20241022-104548.xyz  20241022-104617.xyz  20241022-104719.xyz  20241022-104837.xyz  20241022-104913.xyz  20241022-105130.xyz  20241022-105553.xyz  AUTHORS.md  LICENSE  README.md  curriculum.py  dataset_6a51a4c955b7cb51dfa31f8a759f45fc.lmdb  globals.py  interp_compare.py  pred.s  pyproject.toml  requirements.txt  setup.py  train.out  utils.py
.github/workflows/: pytest.yaml
conf/: spoof.yaml
curriculum_dir/: curriculum.py  test_config_ode.yaml
curriculum_dir/lessons/: test_config_ode_cell.yaml  test_config_ode_pos.yaml  test_config_ode_pos_.yaml  test_config_ode_species.yaml
data/: augment_data.py
example/: com_interpolation_plot.py  dataloader.py  datamodule.py  dataset_6a51a4c955b7cb51dfa31f8a759f45fc.lmdb  example.lmdb  example.xyz  niggli.py  plot_average_interpolants.py  plot_average_interpolants_pbc.py  plot_average_two_interpolants.py  plot_average_two_interpolants_pbc.py  plot_interpolants.py  plot_pbc_derivatives.py  sampler.py  test_exact_coupled_integration.py  test_exact_integration.py  test_interpolation.py  translation_test_periodic_interpolant.py  write_xyz_to_lmdb.py
lightning_logs/version_52490050/: events.out.tfevents.1729544570.cm045.hpc.nyu.edu
model/: head.py  model.py
model/heads/: cspnet.py
omg/: analysis.py  globals.py  main.py  omg.py  omg_cli.py  omg_lightning.py  omg_trainer.py  utils.py
scripts/: analyze_dataset.py  check_gen.py  check_validity.py  dataset_274518dcfedeeb30399261097eb4fcb7.lmdb  main.py  test.ipynb  test.py  train.py
si/: __init__.py  abstracts.py  discrete_flow.py  epsilon.py  gamma.py  interpolants.py  loss.py  multiple_stochastic_interpolants.py  si_config.yaml  single_stochastic_interpolant.py  single_stochastic_interpolant_identity.py  stochastic_interpolant.py  stochastic_interpolants.py
tests/: test_OT_sampler.py  test_coupled_integrator.py  test_integrators_ODE.py  test_integrators_SDE.py  test_integrators_discrete.py
(+143 files in other folders)
