[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "omg"
readme = "README.md"
requires-python = ">=3.9,<3.13"
version = "0.0.1"
dependencies = [
    "numpy ~= 1.26",
    "scipy ~= 1.14",
    "torch == 2.4.0",
    "lightning ~= 2.4",
    "torch_geometric ~= 2.6",
    "torch_scatter ~= 2.1",
    "torchdiffeq ~= 0.2",
    "torchsde ~= 0.2",
    "lmdb ~= 1.5",
    "loguru ~= 0.7",
    "monty ~= 2024.7",
    "ase ~= 3.23",
    "jsonargparse ~= 4.33",
    "jsonargparse[signatures] ~= 4.27",
    "lightning[pytorch-extra]",
    "pytest ~= 8.3",
    "tqdm ~= 4.65",
    "smact ~= 2.8",
    "wandb ~= 0.18"
]

[project.scripts]
omg = "omg.main:main"
